crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_record_return_type.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Function(
    FunctionDecl {
        annotations: [],
        is_external: false,
        is_async: false,
        is_generator: false,
        is_getter: false,
        is_setter: false,
        return_type: Some(
            Record(
                RecordType {
                    positional: [
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "String",
                                        span: Span {
                                            start: 1,
                                            end: 7,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 1,
                                    end: 7,
                                },
                            },
                        ),
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "int",
                                        span: Span {
                                            start: 9,
                                            end: 12,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 9,
                                    end: 12,
                                },
                            },
                        ),
                    ],
                    named: [],
                    is_nullable: false,
                    span: Span {
                        start: 0,
                        end: 14,
                    },
                },
            ),
        ),
        name: Identifier {
            name: "pair",
            span: Span {
                start: 14,
                end: 18,
            },
        },
        type_params: [],
        params: FormalParamList {
            positional: [],
            optional_positional: [],
            named: [],
            span: Span {
                start: 18,
                end: 21,
            },
        },
        body: Some(
            Arrow(
                Record {
                    fields: [
                        RecordField {
                            name: None,
                            value: StringLit(
                                StringLitNode {
                                    raw: "'hello'",
                                    value: "hello",
                                    span: Span {
                                        start: 25,
                                        end: 32,
                                    },
                                    interpolations: [],
                                },
                            ),
                            span: Span {
                                start: 24,
                                end: 32,
                            },
                        },
                        RecordField {
                            name: None,
                            value: IntLit {
                                value: "42",
                                span: Span {
                                    start: 34,
                                    end: 36,
                                },
                            },
                            span: Span {
                                start: 34,
                                end: 36,
                            },
                        },
                    ],
                    span: Span {
                        start: 24,
                        end: 37,
                    },
                },
                Span {
                    start: 21,
                    end: 38,
                },
            ),
        ),
        span: Span {
            start: 0,
            end: 38,
        },
    },
)
